--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-header{
-  background-image: url(../../public/background.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  aspect-ratio: 1300/493;
-}
-
 .pink-gelco{
   color: #d50057;
 }
+
+.bg-pink-gelco{
+  background-color: #d50057
+}
+
+.bg-blue-gelco{
+  background-color: #270089;
+}
+
 
 .blue-gelco{
   color: #270089;
