--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 }
 
 .bg-pink-gelco{
-  background-color: rgb(197, 022, 087)
+  background-color: rgb(197, 022, 087);
 }
 
 .bg-blue-gelco{
@@ -35,6 +35,11 @@
   position: relative;
 }
 
+.hr-gradient{
+  height: 5px;
+  border: none;
+  background-image: linear-gradient(to right, rgb(052, 044, 125), rgb(197, 022, 087));
+}
 
 @layer utilities {
   .text-balance {
