Update Case 2 Page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,10 @@
   -webkit-background-clip: text;
 }
 
+.list-alpha{
+  list-style: lower-alpha;
+}
+
 .hr-gradient{
   height: 5px;
   border: none;
