--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,3 +82,12 @@
   border-color: rgb(52, 44, 125);
   border-style: solid;
 }
+
+/* styles/globals.css */
+.full-screen-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
