--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,11 +83,14 @@
   border-style: solid;
 }
 
-/* styles/globals.css */
 .full-screen-loader {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   width: 100vw;
+}
+
+select:focus{
+  outline: none;
 }
