--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-.SectionWelcomePage {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(245, 245, 244);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(39, 0, 137);
+  border-radius: 10px;
+  border: 3px solid rgb(245, 245, 244);
 }
 
 .pink-gelco{
@@ -26,7 +35,7 @@
 }
 
 .bg-blue-gelco{
-  background-color: rgb(052, 044, 125);
+  background-color: rgb(39, 0, 137);
 }
 
 .bg-cyan-gelco{
@@ -77,11 +86,6 @@
   background-image: linear-gradient(to right, rgb(052, 044, 125), rgb(197, 022, 087));
 }
 
-.bordespagina {
-  border-width: 0 5.5px;
-  border-color: rgb(52, 44, 125);
-  border-style: solid;
-}
 
 .full-screen-loader {
   display: flex;
@@ -97,4 +101,9 @@ select:focus{
 
 p > span{
   font-weight: 550;
+}
+
+.text-glow:hover {
+  text-shadow: 0 0 1px #fff, 0 0 1px #fff, 0 0 1px #fff;
+  transition: 150ms;
 }
