--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection{
+  background-color: rgb(0, 161, 200);
+  color: white;
+}
 
 ::-webkit-scrollbar {
   width: 12px;
